test/runtime/fail/if/missing_else_if_condition.hy

// expect error: Expected operand in expression

let a = 3
if a {
	// ...
} else if {
	// ...
}
